--- a/css/style.css
+++ b/css/style.css
@@ -53,21 +53,31 @@ body {
 	background: #0ff;
 }
 
-.texto {
+.titulo {
+	height: 10vh;
+	font-size: 6.0em;
+	flex-basis: 20%;
+	padding-top: 5vh;
+}
+
+.textoRobo {
 	flex-basis: 40%;
 	text-align: center;
 	justify-content: space-between;
-	height: 55vh;
+	height: 70vh;
+	font-size: 1.2em;
 }
 
-.texto img {
-	width: 166px;
-	height: 95px;
+.textoRobo img {
+	width: 215px;
+	height: 123px;
 }
 
 .video{
 	flex-basis: 40%;
 	text-align: center;
+	/*border: 5px solid #ff4873;
+	border-radius: 5px;*/
 }
 
 #etapas {
@@ -88,16 +98,97 @@ body {
 	background: #aaa;
 }
 
+.texto {
+	flex-basis: 80%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    font-size: 1.2em;
+}
+
+.texto div {
+	flex-basis: 45%;
+    text-align: center;
+}
+
+.texto div img {
+	width: 540px;
+	height: 295px;
+	border: 5px solid #ff4873;
+	border-radius: 5px;
+}
+
+.botaoGame {
+	width: 243px;
+	height: 48px;
+	color: #FFF;
+	font-size: 1.1em;
+	background-color: #ff4873;
+	border: 5px solid #ff4873;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+.botaoGame:hover {
+	color: #ff4873;
+	font-size: 1.1em;
+	background-color: #fff;
+	border: 3px solid #ff4873;
+	border-radius: 10px;
+}
+
 #time {
 	height: 88vh;
 	width: 100%;
 	background: #bbb;
 }
 
+.textoTime {
+	flex-basis: 80%;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    font-size: 1.2em;
+}
+
+.textoTime p {
+	text-align: left;
+}
+
+.textoTime h1 {
+	text-align: left;
+	font-size: 3.0em;
+	width: 100%;
+}
+
+.textoTime div {
+	flex-basis: 45%;
+    text-align: center;
+}
+
+.textoTime div img {
+	width: 300px;
+	height: 300px;
+	border: 5px solid #ff4873;
+	border-radius: 50%;
+}
+
+.foto {
+	padding-left: 100px;
+}
+
+.descricao {
+	height: 50vh;
+	justify-content: center;
+	padding-right: 100px;
+}
+
 #rodape {
 	height: 12vh;
 	width: 100%;
-	font-size: 1.2em;	
+	font-size: 0.9em;	
 }
 
 .container {
@@ -116,3 +207,148 @@ body {
 .wrap {
 	flex-wrap: wrap;
 }
+
+.carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+    width: 100%;
+    margin: auto;
+    padding: 0;
+  }
+
+.fullHeight {
+    height: 100vh;
+  }
+
+/* -------- carousel ------- */
+
+   
+#carousel, #carousel > div {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-color: #455A64;
+    overflow: hidden;
+
+}
+
+    #carousel > div {
+        position: absolute;
+    }
+
+    #carousel > i {
+        color: #fff;
+        position: absolute;
+        font-size: 60px;
+        margin: 20px;
+        top: 40%;
+        cursor: pointer;
+        -moz-transition: .2s;
+        -o-transition: .2s;
+        -webkit-transition: .2s;
+        transition: .2s;
+    }
+
+    #carousel > #left {
+        left: -100px;
+    }
+
+    #carousel > #right {
+        right: -100px;
+    }
+
+    #carousel:hover > #left {
+        left:0;
+    }
+
+    #carousel:hover > #right {
+        right: 0;
+    }
+
+    #carousel > i:active {
+        color: #fff;
+        -moz-transform: translate(0,5px);
+        -ms-transform: translate(0,5px);
+        -o-transform: translate(0,5px);
+        -webkit-transform: translate(0,5px);
+        transform: translate(0,5px);
+        cursor: pointer;
+    }
+
+    #carousel > ul {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 4;
+        padding: 0;
+        margin: 0;
+    }
+
+        #carousel > ul > li {
+            margin: 0;
+            padding: 0;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            list-style: none;
+            float: left;
+            background-color: none;
+            margin-right: 20px;
+            cursor: pointer;
+            border: 2px solid #fff;
+            -moz-transition: .3s;
+            -o-transition: .3s;
+            -webkit-transition: .3s;
+            transition: .3s;
+        }
+
+            #carousel > ul > li.showli {
+                background-color: #fff;
+                border: 5px solid white;
+                                
+            }
+
+            #carousel > ul > li:hover {
+                background-color: #fff;
+                border: 5px solid white;
+            }
+
+    #carousel > div.show {
+        z-index: 1;
+	}
+	
+
+	.glyphicon-left{
+		position:relative;
+		top:1px;
+		display:inline-block;
+		-webkit-font-smoothing:antialiased;
+	
+		background-image: url("C:/Users/logonrmlocal/Desktop/Site Starzilla/imagens/setaBrancaEsq.png");
+		background-repeat: no-repeat;
+		width: 30px;
+		height: 55px;
+		z-index: 5;
+		}
+	
+		.glyphicon-right{
+			position:relative;
+			top:1px;
+			display:inline-block;
+			-webkit-font-smoothing:antialiased;
+		
+			background-image: url("C:/Users/logonrmlocal/Desktop/Site Starzilla/imagens/setaBrancaDir.png");
+			background-repeat: no-repeat;
+			width: 30px;
+			height: 55px;
+			z-index: 5;
+			}
+
+
+
+
+
